# ego_planner_2D_ros2_myself

./: .gitignore  1_start_planner.sh  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  build_debug.sh  build_on_dog.sh  build_release.sh  claude思考过程.txt  dog_move_forward.py  package.xml
.github/workflows/: ci.yml
LICENSES/: THIRD_PARTY_NOTICES.md
application/: dog_planner_node.cpp  planner_interface_dog.cpp
config/: planner_params.yaml
docs/: DEPLOYMENT_DOG3.md  MOVEFORWARD_DOG3.md
include/dog_ego_planner/: planner_interface_dog.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dog_ego_planner/share/ament_index/resource_index/package_run_dependencies/: dog_ego_planner
install/dog_ego_planner/share/dog_ego_planner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: dog_ego_planner.launch.py  robot_launch.py
lib/lib_bspline_opt/include/bspline_opt/: bspline_optimizer.h  lbfgs.hpp
lib/lib_bspline_opt/src/: bspline_optimizer.cpp  gradient_descent_optimizer.cpp  uniform_bspline.cpp
lib/lib_grid_map2d/include/plan_env/: grid_map.h
lib/lib_grid_map2d/src/: grid_map.cpp
lib/lib_path_searching/include/path_searching/: dyn_a_star.h
lib/lib_path_searching/src/: dyn_a_star.cpp
log/: latest_build
planner/plan_manage/launch/: robot_launch.py
planner/plan_manage/rviz/: dog_debug.rviz
rviz/: dog_debug.rviz
scripts/: build.sh  record_rosbag_dog3.sh  test_isolated.sh
src/: dog_planner_node.cpp
src/mapping/: grid_map.cpp  grid_map.hpp
src/node/: dog_planner_node.cpp  dog_planner_node.hpp  main.cpp  point_cloud_processor.cpp  point_cloud_processor.hpp
src/path_processing/: path_utils.cpp  path_utils.hpp
src/planning/: a_star.cpp  a_star.hpp  planner_interface_dog.cpp  planner_interface_dog.hpp  planning_state.hpp
test/: test_a_star.cpp  test_bspline.cpp  test_dog_move_forward.py  test_grid_map.cpp  test_launch.py  test_node_integration.py  test_node_parameters.cpp  test_path_utils.cpp  test_point_cloud_processor.cpp
